--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </div>
 
       <!-- Online portfolios -->
-      <div>
-        <div class="text-center row" style="padding-bottom: 40px">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="text-center row">
           
           <!-- GitHub -->
           <div class="col-sm-12 col-md-12 col-lg-3 mobile-padding-adjustment">
