--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Anunai Ishan</title>
-    
+    <!-- Favicon -->
+    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon" />
+
     <!-- jQuery CDN -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -62,6 +64,10 @@
 
       <!-- jQuery code to append information content -->
       <script type="text/javascript" src="js/modifyWebsiteContent.js"></script>
+      <!-- Custom JavaScript -->
+      <script type="text/javascript" src="js/books.js"></script>
+      <script type="text/javascript" src="js/coursework.js"></script>
+
       <!-- Profile Picture -->
       <div class="text-center" style="padding-top: 40px">
         <img src="resources/images/profile_picture.jpg" class="img-circle" width="100" height="100">
@@ -70,8 +76,10 @@
       <!-- Name and brief information -->
       <div>
         <span><h1 class="text-center h2">Anunai Ishan</h1></span>
-        <span><p class="text-center text-muted">Studying Computer Science at Purdue University</p></span>
+        <span><p class="text-center text-muted">Philomath, Problem solver, Engineer</p></span>
       </div>
+
+      <p class="lead text-center" id="education"></p>
 
       <!-- Online portfolios -->
       <div class="jumbotron jumbotron-fluid">
@@ -101,7 +109,6 @@
 
       <div class="container-fluid" style="padding-bottom: 40px">
         
-        <p class="lead text-center" id="education"></p>
         <p class="lead text-center" id="coursework"></p>
         <p class="lead text-center" id="books"></p>
         <p class="lead text-center" id="hackathons"></p>
