Make minor changes and refactor

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
         font-size: 1.5em;
         padding-bottom: 20px;
       }
+
+      /* image animation */
+      img {
+        opacity: 1.0;
+      }
+
+      img:hover {
+        opacity: 0.8;
+      }
     </style>
 
     <!-- Custom Script - for displaying tooltip on Font Awesome Icons -->
@@ -87,22 +96,22 @@
           
           <!-- GitHub -->
           <div class="col-sm-12 col-md-12 col-lg-3 mobile-padding-adjustment">
-            <a href="https://github.com/ianunai" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="GitHub"></i></a>
+            <a href="https://github.com/ianunai" target="_blank"><i class="fa fa-github fa-5x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="GitHub"></i></a>
           </div>
 
           <!-- LinkedIn -->
           <div class="col-sm-12 col-md-12 col-lg-3 mobile-padding-adjustment"> 
-            <a href="https://www.linkedin.com/in/ianunai/" target="_blank"><i class="fa fa-linkedin fa-4x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"></i></a>
+            <a href="https://www.linkedin.com/in/ianunai/" target="_blank"><i class="fa fa-linkedin fa-5x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"></i></a>
           </div>
 
           <!-- Quora -->
           <div class="col-sm-12 col-md-12 col-lg-3 mobile-padding-adjustment">
-            <a href="https://www.quora.com/profile/Ishan-Anunai" target="_blank"><i class="fa fa-quora fa-4x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Quora"></i></a>
+            <a href="https://www.quora.com/profile/Ishan-Anunai" target="_blank"><i class="fa fa-quora fa-5x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Quora"></i></a>
           </div>
 
           <!-- WordPress -->
           <div class="col-sm-12 col-md-12 col-lg-3 mobile-padding-adjustment">
-            <a href="https://ianunai.wordpress.com/" target="_blank"><i class="fa fa-wordpress fa-4x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="WordPress"></i></a>
+            <a href="https://ianunai.wordpress.com/" target="_blank"><i class="fa fa-wordpress fa-5x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="WordPress"></i></a>
           </div>
         </div>
       </div>
