Remove defunct scripts

--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
   <body>
     <div class="container-fluid" id="overall-container">
 
-      <!-- jQuery code to append information content -->
+      <!-- Custom scripts -->
       <script type="text/javascript" src="js/modifyWebsiteContent.js"></script>
-      <!-- Custom JavaScript -->
-      <script type="text/javascript" src="js/books.js"></script>
-      <script type="text/javascript" src="js/coursework.js"></script>
 
       <!-- Profile Picture -->
       <div class="text-center" style="padding-top: 40px">
