Make change to picture, change description, add more content

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<header>
 						<h1>Anunai Ishan</h1>
 						<p>
-							Philomath, Engineer, Problem solver, Mentor
+							Philomath, Engineer, Problem Solver, Mentor
 						</p>
 					</header>
 					<a href="#main" class="button big scrolly">About Me</a>
@@ -49,22 +49,33 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<img src="images/profile-picture.jpg" alt="" />
+											<img src="images/profile-picture-2.jpg" alt="" />
 										</div>
 									</div>
 									<div class="col col2">
 										<h3>Hello, World!</h3>
 										<p>
-											My name is Anunai Ishan. I am currently a <strong>junior</strong> in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>. My <strong>interests</strong> lie in the field of <strong>Software Engineering</strong> and <strong>Machine Learning</strong>. I also have a <strong>minor</strong> in <strong>Management</strong> from the <a href="https://krannert.purdue.edu/" target="_blank">Krannert School of Management</a> at <strong>Purdue University</strong>. Outside classroom, I spend time teaching myself new things and using my knowledge to solve problems around me.
+											My name is Anunai Ishan. I am currently a junior in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>.
+											My interests lie in the fields of Software Engineering and Machine Learning.
+											I also have a minor in Management from the <a href="https://krannert.purdue.edu/" target="_blank">Krannert School of Management</a>.
+											Outside classroom, I spend time teaching myself new technologies, tools and concepts and using my knowledge to solve problems around me.
 										</p>
 										<p>
-											I volunteered to mentor middle school students at <strong>BoilerCode 2018</strong> (now known as <strong>MiniMake</strong>) in developing their own website and Android application by teaching them the basics of web development and app development in <a href="http://appinventor.mit.edu/explore/" target="_blank">MIT App Inventor 2</a>. As a secretary of <a href="http://purduelug.org/" target="_blank">Purdue Linux Users Group (PLUG)</a>, I actively manage outreach among students interested in computers and organize tech talks with professors about work most meaningful to them.
+											I volunteered to mentor middle school students at BoilerCode 2018 (now known as MiniMake) in developing their own website and Android application by teaching them the basics of web development and app development in <a href="http://appinventor.mit.edu/explore/" target="_blank">MIT App Inventor 2</a>. 
+											My interest in mentoring middle school students in familiarizing them with programming and the fact that it encompasses so many fields today led me to join the MiniMake Organizing Committee and work on outreach amongst students in the Lafayette School District 
+											and work extensively with other members in designing curriculums for the mentor sessions.
 										</p>
 										<p>
-											I an avid reader, and recently finished reading <strong>How to Change the World</strong>: Social Entrepreneurs and the Power of New Ideas by <strong>David Bornstein</strong>. The book imparted an incredible insight into the work of social entrepreneurs all across the globe, ranging from the work of Nobel Prize-winning economist <a href="https://www.ashoka.org/en/story/muhammad-yunus-how-change-world-do-reverse" target="_blank">Muhammad Yunus</a> in pioneering microcredit and microfinance to poor people in Bangladesh to <a href="https://www.ashoka.org/en/fellow/erzs%C3%A9bet-szekeres" target="_blank">Erzsébet Szekeres</a> creating a nationwide program for training, employing and housing disabled adults in Hungary and countless other people. The most important takeaway from this book was how these people came up with creative solutions that had previously never been thought of as they dealt with issues stigmatized by the society.
+											As the secretary of <a href="http://purduelug.org/" target="_blank">Purdue Linux Users Group (PLUG)</a>, I actively manage outreach among students interested in computing technologies and organize tech talks with professors about their research.
 										</p>
 										<p>
-											I began teaching myself calligraphy last year and am currently trying to master the <a href="https://en.wikipedia.org/wiki/Uncial_script" target="_blank">uncial script</a>, used by Latin and Greek scribes from the fourth to eight centuries.
+											I an avid reader, and recently finished reading How to Change the World by David Bornstein. 
+											The book imparted incredible insight into the work of social entrepreneurs all across the globe, ranging from the work of Nobel Prize-winning economist <a href="https://www.ashoka.org/en/story/muhammad-yunus-how-change-world-do-reverse" target="_blank">Muhammad Yunus</a> in pioneering microcredit and microfinance to poor people in Bangladesh 
+											to <a href="https://www.ashoka.org/en/fellow/erzs%C3%A9bet-szekeres" target="_blank">Erzsébet Szekeres</a> creating a nationwide program for training, employing and housing disabled adults in Hungary and countless other people. 
+											The most important takeaway from this book was how these people came up with creative solutions that had previously never been thought of as they dealt with issues stigmatized by the society.
+										</p>
+										<p>
+											I began teaching myself calligraphy last year and am currently trying to master the <a href="https://en.wikipedia.org/wiki/Uncial_script" target="_blank">uncial script</a>, a majuscule script used by Latin and Greek scribes from the fourth to eight centuries to author religious scriptures.
 										</p>
 									</div>
 								</div>
@@ -93,7 +104,7 @@
 										<dt><strong>EPI-USE America, Inc.</strong> - West Lafayette, IN • May, 2017 - Aug, 2017</dt>
 										<dd>
 											<p>
-												As an <strong>application developer intern</strong>, I worked closely with consultants as they implemented solutions for <a href="https://www.purdue.edu/treasurer/transform/Projects/bpr.html" target="_blank">Business Process Reengineering</a> and <a href="https://www.purdue.edu/treasurer/transform/Projects/HCM/index.html" target="_blank">Human Capital Management</a> at Purdue University.
+												As an <strong>application developer intern</strong>, I worked closely with consultants specializing in SAP as they implemented solutions for <a href="https://www.purdue.edu/treasurer/transform/Projects/bpr.html" target="_blank">Business Process Reengineering</a> and <a href="https://www.purdue.edu/treasurer/transform/Projects/HCM/index.html" target="_blank">Human Capital Management</a> at Purdue University.
 												<br>
 												I was involved in making an SAPUI5 application for payroll management for summer employees, previously being done using Excel spreadsheet, thus automating the process and introducing consistency, speed and reliability.
 												<br>
@@ -123,12 +134,13 @@
 										</div>
 								</div>
 								<div class="col col2" >
-									<h3>Recent Projects</h3>
+									<h3>Recent Projects and Teaching Assistantships</h3>
 									<dl>
 										<dt><strong>Hello Git</strong> • Sep, 2018</dt>
 										<dd>
 											<p>
-												A tech talk on Version Control System(VCS) and Git at Hello World 2018, a freshman hackathon by Purdue Linux Users Group
+												A tech talk on Version Control using Git at Hello World 2018, the annual hackathon aimed at introducing freshmen in Computer Science 
+												at Purdue to tools used in the industry
 												<br>
 												Repository can be found <a href="https://github.com/ianunai/hello-git" target="_blank">here</a>.
 											</p>
@@ -153,6 +165,13 @@
 												Built using C, C++ and Bash script
 												<br>
 												Repository can be found <a href="https://github.com/parth-shel/xpac" target="_blank">here</a>.
+											</p>
+										</dd>
+										<dt><strong>CS 252: Systems Programming</strong> • Aug, 2018 - Present</dt>
+										<dd>
+											<p>
+												Undergraduate Teaching Assistant for Systems Programming under Professor Gustavo Rodriguez-Rivera 
+												covering the essentials of memory management, shell scripting, processes, threads and networking
 											</p>
 										</dd>
 									</dl>
