Increase font size for improved readability

--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
 									</div>
 									<div class="col col2">
 										<h3>Hello, World!</h3>
-										<p>
+										<p style="font-size:1.2em">
 											My name is Anunai Ishan. I am currently a junior in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>.
 											My interests lie in the fields of Software Engineering and Machine Learning.
 											I also have a minor in Management from the <a href="https://krannert.purdue.edu/" target="_blank">Krannert School of Management</a>.
 											Outside classroom, I spend time teaching myself new technologies, tools and concepts and using my knowledge to solve problems around me.
 										</p>
-										<p>
+										<p style="font-size:1.2em">
 											I volunteered to mentor middle school students at BoilerCode 2018 (now known as MiniMake) in developing their own website and Android application by teaching them the basics of web development and app development in <a href="http://appinventor.mit.edu/explore/" target="_blank">MIT App Inventor 2</a>. 
 											My interest in mentoring middle school students in familiarizing them with programming and the fact that it encompasses so many fields today led me to join the MiniMake Organizing Committee and work on outreach amongst students in the Lafayette School District 
 											and work extensively with other members in designing curriculums for the mentor sessions.
 										</p>
-										<p>
+										<p style="font-size:1.2em">
 											As the secretary of <a href="http://purduelug.org/" target="_blank">Purdue Linux Users Group (PLUG)</a>, I actively manage outreach among students interested in computing technologies and organize tech talks with professors about their research.
 										</p>
-										<p>
+										<p style="font-size:1.2em">
 											I an avid reader, and recently finished reading How to Change the World by David Bornstein. 
 											The book imparted incredible insight into the work of social entrepreneurs all across the globe, ranging from the work of Nobel Prize-winning economist <a href="https://www.ashoka.org/en/story/muhammad-yunus-how-change-world-do-reverse" target="_blank">Muhammad Yunus</a> in pioneering microcredit and microfinance to poor people in Bangladesh 
 											to <a href="https://www.ashoka.org/en/fellow/erzs%C3%A9bet-szekeres" target="_blank">Erzsébet Szekeres</a> creating a nationwide program for training, employing and housing disabled adults in Hungary and countless other people. 
 											The most important takeaway from this book was how these people came up with creative solutions that had previously never been thought of as they dealt with issues stigmatized by the society.
 										</p>
-										<p>
+										<p style="font-size:1.2em">
 											I began teaching myself calligraphy last year and am currently trying to master the <a href="https://en.wikipedia.org/wiki/Uncial_script" target="_blank">uncial script</a>, a majuscule script used by Latin and Greek scribes from the fourth to eight centuries to author religious scriptures.
 										</p>
 									</div>
@@ -89,9 +89,9 @@
 								<div class="col col2" >
 									<h3>Work Experience</h3>
 									<dl>
-										<dt><strong>Catalyst Consulting Group, Inc.</strong> - Chicago, IL • Jun, 2018 - Aug, 2018</dt>
+										<dt style="font-size:1.2em"><strong>Catalyst Consulting Group, Inc.</strong> - Chicago, IL • Jun, 2018 - Aug, 2018</dt>
 										<dd>
-											<p>
+											<p style="font-size:1.2em">
 												As a <strong>software engineering intern</strong>, I worked closely with the software engineering team at Catalyst to provide enhancements to the existing Online Full Payment Certification (OFPC) application of the Department of Finance, City of Chicago.
 												<br>
 												I was involved in designing a solution to facilitate bulk upload for FPC applications for the properties owned by the City of Chicago, thus assisting them in efficient and speedy management of their FPCs.
@@ -101,9 +101,9 @@
 												More information can be found <a href="https://www.catconsult.com/catalyst-continue-application-support-maintenance-city-chicago-full-payment-certificate-water-billing-ivr/" target="_blank">here</a>.
 											</p>
 										</dd>
-										<dt><strong>EPI-USE America, Inc.</strong> - West Lafayette, IN • May, 2017 - Aug, 2017</dt>
+										<dt style="font-size:1.2em"><strong>EPI-USE America, Inc.</strong> - West Lafayette, IN • May, 2017 - Aug, 2017</dt>
 										<dd>
-											<p>
+											<p style="font-size:1.2em">
 												As an <strong>application developer intern</strong>, I worked closely with consultants specializing in SAP as they implemented solutions for <a href="https://www.purdue.edu/treasurer/transform/Projects/bpr.html" target="_blank">Business Process Reengineering</a> and <a href="https://www.purdue.edu/treasurer/transform/Projects/HCM/index.html" target="_blank">Human Capital Management</a> at Purdue University.
 												<br>
 												I was involved in making an SAPUI5 application for payroll management for summer employees, previously being done using Excel spreadsheet, thus automating the process and introducing consistency, speed and reliability.
@@ -135,8 +135,8 @@
 								</div>
 								<div class="col col2" >
 									<h3>Recent Projects and Teaching Assistantships</h3>
-									<dl>
-										<dt><strong>Hello Git</strong> • Sep, 2018</dt>
+									<dl style="font-size:1.2em">
+										<dt ><strong>Hello Git</strong> • Sep, 2018</dt>
 										<dd>
 											<p>
 												A tech talk on Version Control using Git at Hello World 2018, the annual hackathon aimed at introducing freshmen in Computer Science 
@@ -186,9 +186,9 @@
 							<div class="flex flex-2">
 								<div class="col col2" >
 									<h3>Coursework</h3>
-									<dl>
-										<dt>Fall 2018</dt>
-										<dd>
+									<dl style="font-size:1.2em">
+										<dt style="font-size:1.2em">Fall 2018</dt>
+										<dd style="font-size:1.2em">
 											<p>
 												CS 38100 • Introduction to the Analysis of Algorithms
 												<br>
