--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 											<p>
 												A web application that lets users send out invitations for events to multiple guests through text messages
 												<br>
-												Built using jQUery, Node.js, Express and Firebase Realtime Database utilizing TwilioAPI
+												Built using jQuery, Node.js, Express and Firebase Realtime Database utilizing TwilioAPI
 												<br>
 												Repository can be found <a href="https://github.com/amolmoses/eventvite" target="_blank">here</a>.
 											</p>
