Update changes with spring 2019 schedule and work experience

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 						<h1>Anunai Ishan</h1>
 						<p>
 							Philomath, Engineer, Problem Solver, Mentor
+							<br>
+							Incoming Technology Summer Analyst at RBC Capital Markets
 						</p>
 					</header>
 					<a href="#main" class="button big scrolly">About Me</a>
@@ -174,6 +176,14 @@
 												covering the essentials of memory management, shell scripting, processes, threads and networking
 											</p>
 										</dd>
+										<dt><strong>CS 182: Foundations of Computer Science</strong> • Jan, 2019 - Present</dt>
+										<dd>
+											<p>
+												Undergraduate Teaching Assistant under Professor Petros Drineas 
+												covering the essentials of logic, proof techniques, number representations, counting, analysis of algorithms, graphs, 
+												trees, recursion, basic probability, boolean logic, finite state machines, computability and undecidability
+											</p>
+										</dd>
 									</dl>
 								</div>
 							</div>
@@ -186,6 +196,22 @@
 							<div class="flex flex-2">
 								<div class="col col2" >
 									<h3>Coursework</h3>
+									
+									<dl style="font-size:1.2em">
+										<dt style="font-size:1.2em">Spring 2019</dt>
+										<dd style="font-size:1.2em">
+											<p>
+												CS 37300 • Data Mining and Machine Learning
+												<br>
+												MA 41600 • Probability
+												<br>
+												CS 34800 • Information Systems
+												<br>
+												COM 21700 • Science Writing And Presentation
+											</p>
+										</dd>
+									</dl>
+
 									<dl style="font-size:1.2em">
 										<dt style="font-size:1.2em">Fall 2018</dt>
 										<dd style="font-size:1.2em">
