Update portfolio on Aug 12, 2019

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<p>
 							Philomath, Engineer, Problem Solver, Mentor
 							<br>
-							Incoming Technology Summer Analyst at RBC Capital Markets
+							2019 Technology Summer Analyst at RBC Capital Markets
 						</p>
 					</header>
 					<a href="#main" class="button big scrolly">About Me</a>
@@ -57,7 +57,7 @@
 									<div class="col col2">
 										<h3>Hello, World!</h3>
 										<p style="font-size:1.2em">
-											My name is Anunai Ishan. I am currently a junior in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>.
+											My name is Anunai Ishan. I am currently a senior in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>, graduating in December, 2019.
 											My interests lie in the fields of Software Engineering and Machine Learning.
 											I also have a minor in Management from the <a href="https://krannert.purdue.edu/" target="_blank">Krannert School of Management</a>.
 											Outside classroom, I spend time teaching myself new technologies, tools and concepts and using my knowledge to solve problems around me.
@@ -68,13 +68,7 @@
 											and work extensively with other members in designing curriculums for the mentor sessions.
 										</p>
 										<p style="font-size:1.2em">
-											As the secretary of <a href="http://purduelug.org/" target="_blank">Purdue Linux Users Group (PLUG)</a>, I actively manage outreach among students interested in computing technologies and organize tech talks with professors about their research.
-										</p>
-										<p style="font-size:1.2em">
-											I an avid reader, and recently finished reading How to Change the World by David Bornstein. 
-											The book imparted incredible insight into the work of social entrepreneurs all across the globe, ranging from the work of Nobel Prize-winning economist <a href="https://www.ashoka.org/en/story/muhammad-yunus-how-change-world-do-reverse" target="_blank">Muhammad Yunus</a> in pioneering microcredit and microfinance to poor people in Bangladesh 
-											to <a href="https://www.ashoka.org/en/fellow/erzs%C3%A9bet-szekeres" target="_blank">Erzsébet Szekeres</a> creating a nationwide program for training, employing and housing disabled adults in Hungary and countless other people. 
-											The most important takeaway from this book was how these people came up with creative solutions that had previously never been thought of as they dealt with issues stigmatized by the society.
+											As the former secretary of <a href="http://purduelug.org/" target="_blank">Purdue Linux Users Group (PLUG)</a>, I actively managed outreach among students interested in computing technologies and organized tech talks with professors about their research.
 										</p>
 										<p style="font-size:1.2em">
 											I began teaching myself calligraphy last year and am currently trying to master the <a href="https://en.wikipedia.org/wiki/Uncial_script" target="_blank">uncial script</a>, a majuscule script used by Latin and Greek scribes from the fourth to eight centuries to author religious scriptures.
@@ -91,6 +85,17 @@
 								<div class="col col2" >
 									<h3>Work Experience</h3>
 									<dl>
+										<dt style="font-size:1.2em"><strong>RBC Capital Markets, LLC</strong> - New York, NY • Jun, 2019 - Aug, 2019</dt>
+										<dd>
+											<p style="font-size:1.2em">
+												As a <strong>technology summer analyst</strong>, at RBC Capital Markets, a global investment bank under the Royal Bank of Canada,
+												I worked with the regulatory reporting team for front offices handling credits, rates and FX in accordance with Dodd-Frank and MiFID II regulations.<br>
+												I worked on designing and implementing a proof of concept of orchestration of microservices constituting the regulatory reporting platform
+												using Docker Swarm. I also developed a utility service that let the support team replay failed trades for regulatory reporting.<br>
+												I worked on creating services tailored towards specific tasks, such as scheduling cron jobs to periodically back up
+												reference data as well as SFTP client to enable users to fetch reports.<br>
+											</p>
+										</dd>
 										<dt style="font-size:1.2em"><strong>Catalyst Consulting Group, Inc.</strong> - Chicago, IL • Jun, 2018 - Aug, 2018</dt>
 										<dd>
 											<p style="font-size:1.2em">
@@ -119,7 +124,7 @@
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<img src="images/chicago.jpg" alt="" />
+										<img src="images/newyork.jpg" alt="" />
 									</div>
 								</div>
 							</div>
@@ -169,14 +174,14 @@
 												Repository can be found <a href="https://github.com/parth-shel/xpac" target="_blank">here</a>.
 											</p>
 										</dd>
-										<dt><strong>CS 252: Systems Programming</strong> • Aug, 2018 - Present</dt>
+										<dt><strong>CS 252: Systems Programming</strong> • Aug, 2018 - May, 2019</dt>
 										<dd>
 											<p>
 												Undergraduate Teaching Assistant for Systems Programming under Professor Gustavo Rodriguez-Rivera 
 												covering the essentials of memory management, shell scripting, processes, threads and networking
 											</p>
 										</dd>
-										<dt><strong>CS 182: Foundations of Computer Science</strong> • Jan, 2019 - Present</dt>
+										<dt><strong>CS 182: Foundations of Computer Science</strong> • Jan, 2019 - May, 2019</dt>
 										<dd>
 											<p>
 												Undergraduate Teaching Assistant under Professor Petros Drineas 
@@ -187,6 +192,7 @@
 									</dl>
 								</div>
 							</div>
+					</div>
 				</section>
 
 
@@ -198,34 +204,16 @@
 									<h3>Coursework</h3>
 									
 									<dl style="font-size:1.2em">
-										<dt style="font-size:1.2em">Spring 2019</dt>
+										<dt style="font-size:1.2em">Fall 2019</dt>
 										<dd style="font-size:1.2em">
 											<p>
-												CS 37300 • Data Mining and Machine Learning
+												CS 47100 • Introduction to Artificial Intelligence
 												<br>
-												MA 41600 • Probability
-												<br>
-												CS 34800 • Information Systems
-												<br>
-												COM 21700 • Science Writing And Presentation
+												CS 44800 • Introduction To Relational Database Systems
 											</p>
 										</dd>
 									</dl>
 
-									<dl style="font-size:1.2em">
-										<dt style="font-size:1.2em">Fall 2018</dt>
-										<dd style="font-size:1.2em">
-											<p>
-												CS 38100 • Introduction to the Analysis of Algorithms
-												<br>
-												STAT 35000 • Introduction to Statistics
-												<br>
-												MGMT 30400 • Introduction to Financial Management
-												<br>
-												MA 37300 • Financial Mathematics
-											</p>
-										</dd>
-									</dl>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
@@ -266,7 +254,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					<p>Anunai Ishan<br><strong>2018</strong></p>
+					<p>Anunai Ishan<br><strong>2019</strong></p>
 				</div>
 			</footer>
 
