Update full time job description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<p>
 							Philomath, Engineer, Problem Solver, Mentor
 							<br>
-							2019 Technology Summer Analyst at RBC Capital Markets
+							QTS Analyst, Class of 2020 at RBC Capital Markets
 						</p>
 					</header>
 					<a href="#main" class="button big scrolly">About Me</a>
@@ -57,10 +57,10 @@
 									<div class="col col2">
 										<h3>Hello, World!</h3>
 										<p style="font-size:1.2em">
-											My name is Anunai Ishan. I am currently a senior in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> at <a href="https://www.purdue.edu/" target="_blank">Purdue University</a>, graduating in December, 2019.
-											My interests lie in the fields of Software Engineering and Machine Learning.
+											My name is Anunai Ishan. I graduated with a Bachelor of Science in <a href="https://www.cs.purdue.edu/" target="_blank">Computer Science</a> from <a href="https://www.purdue.edu/" target="_blank">Purdue University</a> in December, 2019.
 											I also have a minor in Management from the <a href="https://krannert.purdue.edu/" target="_blank">Krannert School of Management</a>.
-											Outside classroom, I spend time teaching myself new technologies, tools and concepts and using my knowledge to solve problems around me.
+											My interests lie in the fields of Software Engineering and Machine Learning.
+											Outside work, I spend time teaching myself new technologies, tools and concepts and using my knowledge to solve problems around me.
 										</p>
 										<p style="font-size:1.2em">
 											I volunteered to mentor middle school students at BoilerCode 2018 (now known as MiniMake) in developing their own website and Android application by teaching them the basics of web development and app development in <a href="http://appinventor.mit.edu/explore/" target="_blank">MIT App Inventor 2</a>. 
@@ -85,6 +85,13 @@
 								<div class="col col2" >
 									<h3>Work Experience</h3>
 									<dl>
+										<dt style="font-size:1.2em"><strong>RBC Capital Markets, LLC</strong> - New York, NY • Feb, 2020 - Present</dt>
+										<dd>
+											<p style="font-size:1.2em">
+												As a <strong>software engineer</strong> and a part of the <strong>QTS Analyst Program, Class of 2020</strong>, I work on the Capital Markets Architecture team, responsible
+												 for the CM data lake.
+											</p>
+										</dd>
 										<dt style="font-size:1.2em"><strong>RBC Capital Markets, LLC</strong> - New York, NY • Jun, 2019 - Aug, 2019</dt>
 										<dd>
 											<p style="font-size:1.2em">
