Update courses taken over the course of undergraduate degree

--- a/index.html
+++ b/index.html
@@ -209,14 +209,51 @@
 							<div class="flex flex-2">
 								<div class="col col2" >
 									<h3>Coursework</h3>
-									
 									<dl style="font-size:1.2em">
-										<dt style="font-size:1.2em">Fall 2019</dt>
 										<dd style="font-size:1.2em">
 											<p>
-												CS 47100 • Introduction to Artificial Intelligence
 												<br>
-												CS 44800 • Introduction To Relational Database Systems
+												Data Mining & Machine Learning
+												<br>
+												Artifical Intelligence
+												<br>
+												Relational Database Management Systems
+												<br>
+												Data Structures & Algorithms
+												<br>
+												Software Engineering
+												<br>
+												Analysis of Algorithms
+												<br>
+												Information Systems
+												<br>
+												Advanced Probability
+												<br>
+												Computer Architecture
+												<br>
+											 	Systems Programming
+												<br>
+												Discrete Mathematics
+												<br>
+												Object-oriented Programming
+												<br>
+												C Programming
+												<br>
+												Multivariate Calculus
+												<br>
+												Linear Algebra
+												<br>
+												Introduction to Statistics
+												<br>
+												Introductory Accounting
+												<br>
+												Management Accounting
+												<br>
+												Microeconomics
+												<br>
+												Financial Management
+												<br>
+												Financial Mathematics
 											</p>
 										</dd>
 									</dl>
@@ -257,13 +294,6 @@
 					</section>
 
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-					<p>Anunai Ishan<br><strong>2019</strong></p>
-				</div>
-			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
