--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">
 	<head>
 		<title>Anunai Ishan</title>
 		<!-- Favicon -->
@@ -20,7 +20,7 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="#work-experience"><span>Work Experience</span></a></li>
+					<li><a href="#work-experience"><span>Worfk Experience</span></a></li>
 					<li><a href="#projects">Recent Projects</a></li>
 					<li><a href="#coursework">Coursework</a></li>
 				</ul>
